<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dip"
        android:layout_marginStart="10dip"
        android:layout_marginTop="10dip"
        android:layout_weight="3"
        android:background="@drawable/border"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dip"
            android:text="@string/interface_configuration"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dip"
                    android:text="@string/select_interface"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/interface_selector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dip"
                    android:addStatesFromChildren="true"
                    android:clickable="true"
                    android:prompt="@string/select_interface_title" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dip"
                    android:labelFor="@+id/slave_address"
                    android:text="@string/select_slave_address"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/slave_address"
                    android:layout_marginStart="7dip"
                    android:inputType="text"
                    android:maxLength="2"
                    android:text="@string/default_slave_address" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/open_interface"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dip"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/open_interface" />

            <Button
                android:id="@+id/close_interface"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dip"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/close_interface" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="25dip"
            android:text="@string/interface_actions"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/read_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/read_data"
            android:textSize="16sp" />

        <Button
            android:id="@+id/write_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/write_data"
            android:textSize="16sp" />

        <Button
            android:id="@+id/erase_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/erase_data"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:layout_weight="2"
        android:background="@drawable/border"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dip"
            android:text="@string/eeprom_data"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/hex_data_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animationCache="true"
            android:background="@color/dark_grey"
            android:cacheColorHint="@color/dark_grey"
            android:choiceMode="none"
            android:drawSelectorOnTop="true"
            android:focusable="false"
            android:paddingBottom="10dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" />
    </LinearLayout>
</LinearLayout>